# colomna

./: CMakeLists.txt  Camera_calibrator.cpp  Camera_calibrator.h  MYfunctions.cpp  MYfunctions.h  Mcolour.txt  My_exeptions.cpp  My_exeptions.h  SmartPoint2f.cpp  SmartPoint2f.h  Smart_point2f.cpp  Smart_point2f.h  Vedeo_controller.cpp  Vedeo_controller.h  Video_controller.cpp  Video_controller.h  main.cpp
text/: calibration_log.txt
